--- a/res/layout/people_item.xml
+++ b/res/layout/people_item.xml
@@ -30,4 +30,13 @@
         android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    <Button
+        android:id="@+id/btnDelete"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/txtName"
+        android:text="Remover" />
+
 </RelativeLayout>
