--- a/res/layout/truth_or_dare.xml
+++ b/res/layout/truth_or_dare.xml
@@ -16,8 +16,8 @@
         android:layout_below="@+id/txtInterviewer"
         android:layout_marginTop="63dp"
         android:text="Large Text"
-        android:visibility="invisible"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/txtTo"
@@ -27,8 +27,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
         android:text="para"
-        android:visibility="invisible"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/txtInterviewer"
@@ -38,34 +38,43 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:text="Large Text"
-        android:visibility="invisible"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/btnSort"
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="115dp"
-        android:text="Sort" />
+        android:background="@drawable/load" 
+         android:minHeight="28dp"
+        android:minWidth="28dp"/>
 
     <Button
         android:id="@+id/btnCancel"
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="19dp"
         android:layout_toLeftOf="@+id/btnSort"
-        android:background="@drawable/cancel"/>
+        android:background="@drawable/cancel"
+        android:minHeight="28dp"
+        android:minWidth="28dp" />
 
     <Button
         android:id="@+id/btnOk"
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/cancel"
-        android:layout_alignBottom="@+id/cancel"
+        android:layout_alignBaseline="@+id/btnCancel"
+        android:layout_alignBottom="@+id/btnCancel"
         android:layout_toRightOf="@+id/btnSort"
-        android:background="@drawable/ok" />
+        android:background="@drawable/ok"
+        android:minHeight="28dp"
+        android:minWidth="28dp" />
 
 </RelativeLayout>
